--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	function exec(comm){
 		sys.exec(comm);
 		sys.out.connect(function(out){
-			$('#out').html("");
-			$('#out').prepend(out+"<br>");
+			$('#out').empty();
+			$('#out').append(out+"<br>");
 		});
 	}
 	$(document).ready(function(){
@@ -22,11 +22,15 @@
 			exec("adb devices");
 		});
 
+		$("#backupdb").click(function(){
+			exec("bin/backup");
+		});
+
 	});
 </script>
 </head>
 <body>
-<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device"> <br>
+<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"><br>
 <div id="out" style="width:100%;height:100%;border:1"></div>
 </body>
 </html>
