--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
 			exec("bin/backup");
 		});
 
+		$("#chksum").click(function(){
+			exec("bin/checksum");
+		});
+
 	});
 </script>
 </head>
 <body>
-<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"><br>
+<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"> <input type="submit" id="chksum" value="Check HASH"><br>
 <div id="out" style="width:100%;height:100%;border:1"></div>
 </body>
 </html>
