--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </script>
 </head>
 <body>
-<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"> <input type="submit" id="chksum" value="Check HASH"><br>
+<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"> <input type="submit" id="chksum" value="Check HASH"> <a href="db.html">Extract Data</a><br>
 <div id="out" style="width:100%;height:100%;border:1"></div>
 </body>
 </html>
