--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <script type="text/javascript" src="qrc:///js/jquery.js"></script>
 <script type="text/javascript">
 	var sys = ign.sys();
+	var fs = ign.filesystem();
+	var home = fs.homePath();
+	var sql_file = home+"/backupBBM/";
 	function exec(comm){
 		sys.exec(comm);
 		sys.out.connect(function(out){
 			$('#out').empty();
 			$('#out').append(out+"<br>");
+		});
+	}
+
+	function reset(){
+		$('#out').empty();
+		var file_list = fs.list(sql_file);
+		file_list.forEach(function(i,j){
+			if(fs.info(i).isFile){
+				fs.fileRemove(i);
+				$('#out').append("remove file "+i+"<br>");
+			}
 		});
 	}
 	$(document).ready(function(){
@@ -37,7 +51,13 @@
 </script>
 </head>
 <body>
-<input type="text" id="ip"> <input type="submit" id="adb" value="Connect To ADB"> <input type="submit" id="device" value="check device">  <input type="submit" id="backupdb" value="backupdb"> <input type="submit" id="chksum" value="Check HASH"> <a href="db.html">Extract Data</a><br>
+<input type="text" id="ip">
+<input type="submit" id="adb" value="Connect To ADB">
+<input type="submit" id="device" value="check device">
+<input type="submit" id="backupdb" value="backupdb">
+<input type="submit" id="chksum" value="Check HASH"> <br>
+<a href="db.html">Extract Data</a><br>
+<a href="#" onclick="reset()">Reset</a><br>
 <div id="out" style="width:100%;height:100%;border:1"></div>
 </body>
 </html>
