--- a/db.html
+++ b/db.html
@@ -49,7 +49,7 @@
 	}
 </script>
 </head>
-<body>
+<body style="background:rgba(236,236,236,1)">
 <a href="index.html">back</a><br>
 <a href="#" onclick="contact()">Show Contact</a><br>
 <div id="out" style="width:100%;height:100%;border:1"></div>
