--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			});
 		}
 	}
-	$(document).ready(function(){
-		$("#adb").click(function(){
+
+		function adb(){
 			$('#out').empty();
 			var ip = $("#ip").val();
 			if(ip != ""){
@@ -51,26 +51,30 @@
 				}
 				exec("adb devices");
 			}
-		});
-		$("#device").click(function(){
-			$('#out').empty();
-			if(!adbServ){
-				exec("adb kill-server");
-			}
-			exec("adb devices");
-		});
+		}
 
-		$("#backupdb").click(function(){
+		function adbkill(){
+			exec("bin/killadb");
+		}
+
+		/*step*/
+
+		function hash(){
 			$('#out').empty();
+			$('.stepnav').removeClass('active');
+			$('#stepnav3').addClass('active');
+			exec("bin/checksumdevice");
+		}
+
+		function backupdb(){
+			$('#out').empty();
+			$('.step').hide();
+			$('#step2').show();
+			$('.stepnav').removeClass('active');
+			$('#stepnav2').addClass('active');
 			exec("bin/backup");
-		});
+		}
 
-		$("#chksum").click(function(){
-			$('#out').empty();
-			exec("bin/checksum");
-		});
-
-	});
 </script>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="js/bootstrap.min.js"></script>
@@ -89,14 +93,14 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="#">BBM Forensik</a>
+			      <a class="navbar-brand" href="#">BBM Fork</a>
 			    </div>
 
 			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Forensik</a></li>
-			        <li><a href="#">Analisis</a></li>
+			        <li class="active"><a href="index.html">Forensik</a></li>
+			        <li><a href="db.html">Analisis</a></li>
 			      </ul>
 
 			      <ul class="nav navbar-nav navbar-right">
@@ -122,9 +126,9 @@
 			  <a href="#" class="list-group-item list-group-item-info disabled">
 			    Menu
 			  </a>
-			  <a href="#" class="list-group-item active">Koneksi ADB</a>
-			  <a href="#" class="list-group-item">Hash Barang Bukti</a>
-			  <a href="#" class="list-group-item">Ambil Barang Bukti</a>
+			  <a href="#" id="stepnav1" class="list-group-item stepnav active">Koneksi ADB</a>
+			  <a href="#" id="stepnav2" class="list-group-item stepnav">Ambil Barang Bukti</a>
+			  <a href="#" id="stepnav3" class="list-group-item stepnav">Periksa Hash Barang Bukti</a>
 			</div>
 		</div>
 		<div class="col-md-9">
@@ -137,17 +141,20 @@
 						<div class="col-xs-4">
 					    <input type="text"  id="ip" class="form-control" placeholder="IP Devices...">
 					  </div>
-						<input type="submit" id="adb" value="Connect To ADB" class="btn btn-primary"><hr>
+						<input type="submit" id="adb" onclick="adb()" value="Terhubung Ke Device" class="btn btn-primary">
+						<input type="submit" id="adb-kill" onclick="adbkill()" value="Matikan ADB Server" class="btn btn-primary"><hr>
 					</div>
 			    <div id="out" style="height:100%"></div>
 			  </div>
 				<div class="panel-footer">
-					<input type="submit" id="backupdb" value="Tahap Selanjudnya" class="btn btn-primary">
+					<input type="submit" id="step1" onclick="backupdb()" value="Next" class="btn btn-primary step" style="">
+					<input type="submit" id="step2" onclick="hash()" value="Next" class="btn btn-primary step" style="display:none">
 				</div>
 			</div>
-
+			<!--
 			<input type="submit" id="backupdb" value="backupdb"><br>
-			<input type="submit" id="chksum" value="Check HASH"> <br>
+			<input type="submit" id="chksum" value="Check HASH"><br>
+		-->
 			<!-- page -->
 
 		</div>
