--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 			var ip = $("#ip").val();
 			if(ip != ""){
 				if(!adbServ){
-					exec("adb kill-server");
+					exec("bin/killadb");
 				}
-				exec("adb connect "+ip);
+				exec("bin/connip "+ip);
 			}
 			else{
 				if(!adbServ){
-					exec("adb kill-server");
+					exec("bin/killadb");
 				}
-				exec("adb devices");
+				exec("bin/connadb");
 			}
 		}
 
@@ -93,7 +93,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="#">BBM Fork</a>
+			     <a class="navbar-brand" href="#" style="padding-top:5px"><img src="icons/icon.png"> BBM Pork</a>
 			    </div>
 
 			    <!-- Collect the nav links, forms, and other content for toggling -->
