Replace Forensik to Akuisisi

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="index.html">Forensik</a></li>
+			        <li class="active"><a href="index.html">Akuisisi</a></li>
 			        <li><a href="db.html">Analisis</a></li>
 			      </ul>
 
