Replace Memuat Ulang

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					    <input type="text"  id="ip" class="form-control" placeholder="IP Devices...">
 					  </div>
 						<input type="submit" id="adb" onclick="adb()" value="Terhubung Ke Device" class="btn btn-primary">
-						<input type="submit" id="adb-kill" onclick="adbkill()" value="Matikan ADB Server" class="btn btn-primary"><hr>
+						<input type="submit" id="adb-kill" onclick="adbkill()" value="Memuat Ulang ADB Server" class="btn btn-primary"><hr>
 					</div>
 			    <div id="out" style="height:100%"></div>
 			  </div>
