--- a/db.html
+++ b/db.html
@@ -26,7 +26,7 @@
 		var r = confirm("Apakah Anda Yakin?");
 		if (r == true) {
 			$('#out').empty();
-			var file_list = fs.list(home+"/backupBBM/");
+			var file_list = fs.list(home+"/ForensikBBM/");
 			file_list.forEach(function(i,j){
 				if(fs.info(i).isFile){
 					fs.fileRemove(i);
