Replace Save to Simpan

--- a/db.html
+++ b/db.html
@@ -104,7 +104,7 @@
   function exportCsv(dt){
     var date = new Date();
     var option = {
-     title : "Save File To",
+     title : "Simpan berkas ke",
      path : dir+"/salinan"+date.getTime()+".csv"
     }
     var save = fs.saveFileDialog(option);
