--- a/db.html
+++ b/db.html
@@ -199,6 +199,7 @@
 				<a href="#" class="list-group-item list-group-item-info disabled">
 					Menu
 				</a>
+                <a href="#" id="stepnav1" onclick="contact()" class="list-group-item stepnav active">Identitas</a>
 				<a href="#" id="stepnav1" onclick="contact()" class="list-group-item stepnav active">Kontak</a>
 				<a href="#" id="stepnav2" onclick="status()" class="list-group-item stepnav">Status</a>
 				<a href="#" id="stepnav3" onclick="conv()" class="list-group-item stepnav">Percakapan</a>
